# BAPCtools

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Dockerfile  generators.yaml  makefile  pyproject.toml  readme.md
.github/workflows/: ci.yaml  pytest.yaml  release.yml
bapctools/: __main__.py  check_testing_tool.py  cli.py  config.py  constraints.py  contest.py  download_submissions.py  expectations.py  export.py  fuzz.py  generate.py  interactive.py  languages.py  latex.py  parallel.py  problem.py  program.py  run.py  skel.py  slack.py  solve_stats.py  stats.py  testcase.py  tools.py  upgrade.py  util.py  validate.py  validator_tests.py  verdicts.py  visualize.py
bapctools/resources/config/: keywords.yaml  languages.yaml  submissions.yaml
bapctools/resources/headers/: compile_flags.txt  validation.h
bapctools/resources/latex/: bapc.cls  bapcbase.sty  contest-problem-slide.tex  contest-web.tex  problem-slide.tex  solution.tex  solutions.tex
bapctools/resources/skel/: testing_tool.py  testing_tool_multi_pass.py
config/: languages.yaml
doc/: abstract.md  commands.md  expectations.md  generated_testcases.md  generated_testcases_v2.yaml  generators.md  generators.yaml  implementation_notes.md  jury-process.md  multiple_languages.md  solve_stats.md  styleguide.md  validation.md  workflow.md  zshrc
doc/images/: 04_generate.rec  generate.rec  run-v.rec  run.rec
doc/images/old/: 02_run.rec  03_run_submission.rec  10_generate.rec
headers/: compile_flags.txt  tikz.h  validation.h  validation_simple.h
latex/: README.md  bapc.cls  bapc2017.cls  contest-data.tex  contest-problem-slide.tex  contest-problem.tex  contest-solution.tex  contest-web.tex  contest.tex  contest_data.tex  en.tex  problem-slide.tex  problem-slides-base.tex  problem-slides.tex  problem.tex  readme.md  solution-web.tex  solution.tex  solutions-base.tex  solutions-web.tex  solutions.tex
latex/contest/: bapc.tex
latex/images/: blank-page-fr.tex
latex/lang/: da.tex  de.tex  en.tex  es.tex  fr.tex  nl.tex
latex/solution/: header_solutions.tex
scripts/: header.tex  problem_to_gitlab.py  readme.md  yapf_format.sh
scripts/pandoc/filters/: gitlab-math.lua
skel/: gitlab-ci-contest.yml  gitlab-ci-header.yml  gitlab-ci-problem.yml  testing_tool.py  testing_tool_multipass.py
skel/contest/: .gitignore  contest.tex  contest.yaml  problems.yaml  problemset.yaml  solution_footer.tex
skel/contest/solve_stats/: language_stats.tex  problem_stats.tex
skel/forgejo_actions/: contest.yaml  problem.yaml  setup.yaml
skel/forgejo_actions_docker_bt/: contest.yaml  problem.yaml
skel/forgejo_actions_latest_bt/: contest.yaml  problem.yaml  setup.yaml
skel/generators/: build  run
skel/gitlab_ci/: contest.yaml  header.yaml  header_docker_bt.yaml  header_latest_bt.yaml  problem.yaml
skel/multiple_validators/: build  run
skel/output_validators/: 0_grammar.cpp
skel/problem/: domjudge-problem.ini  problem.yaml  readme.md
skel/problem/generators/: example.py  gen.yaml  generator  generators.yaml  stdout.py
skel/problem/input_validators/: .gitignore  checker.cpp  grammar.ctd  input_validator.cpp  validate.ctd.template  validate.viva.template  validation.h
skel/problem/input_visualizer/: readme.md
skel/problem/output_validator/: output_validator.cpp  validation.h
skel/problem/output_validators/: .gitignore  1_output_validator.cpp  build  grammar.h  output_validator.cpp  validate.ctd.template  validate.viva.template
skel/problem/output_visualizer/: example_output_visualizer.py
skel/problem/problem_slide/: problem-slide.en.tex
skel/problem/problem_statement/: figure.tex.template  problem.en.tex  problem.tex  solution.tex
skel/problem/test_case_visualizer/: readme.md
skel/problem_cfp/: README.md  SOLUTION.md  author.md  problem.yaml  readme.md
skel/problem_cfp/problem_statement/: problem.en.md  problem.en.tex
skel/problem_minimal/: AUTHOR.txt
skel/problem_statement/: problem.tex
skel/problem_template/: README.txt
stubs/vermin/: __init__.pyi
support/: 7.txt  a.out  ans.txt  default_output_validator.cpp  default_output_validator.py  generators_yaml_schema.cue  generators_yaml_schema.json
support/schemas/: generators.cue  generators_yaml_schema.json  generators_yaml_schema_0_9.json  problemformat.cue  submissions.cue  testdata.cue
test/: test_default_output_validator.py  test_generators_yaml.py  test_problem_yaml.py  test_problems.py  test_verdicts.py
test/default_output_validator/: default_output_validator.yaml
test/generator_yaml/: bad_generator.yaml  bad_generators.yaml  test_schemata.sh
test/prob/: .gitignore
test/prob/generators/: a.cpp  (+9 more)
test/problems/: .gitignore  contest.yaml  problems.yaml  problemset.yaml  solution_footer.tex  solution_header.tex
test/yaml/: validate_yaml.sh
tools/: make_all_domjudge_zips.py  tools.py
(+536 files in other folders)
