[project]
name = "bapctools"
version = "0.0.0"
dependencies = [
    "pyyaml~=6.0.3",
    "colorama~=0.4.6",
    "argcomplete~=3.6.3; platform_system != 'Windows'",
    "python-dateutil~=2.9.0",
    "ruamel.yaml~=0.18.16",
    "matplotlib~=3.10.7",
    "requests~=2.32.5",
    "questionary~=2.1.1",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pre-commit~=4.5.1",
    "pytest~=9.0.1",
    "bapctools[types]",
]
types = [
    "mypy~=1.19",
    "types-colorama~=0.4.15",
    "types-Pygments~=2.18.0",
    "types-python-dateutil~=2.9.0",
    "types-PyYAML~=6.0.12",
    "types-requests~=2.32.0",
]

[project.scripts]
bt = "bapctools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Enable import sorting rules
extend-select = ["I"]

[tool.ruff.lint.isort]
# Case-insensitive ordering in `from ? import X, y, Z`
order-by-type = false

[tool.pyright]
include = ["bapctools"]
exclude = ["bapctools/resources"]

[tool.mypy]
python_version = "3.10"
packages = "bapctools"
exclude = ["^bapctools/resources/"]
check_untyped_defs = true
enable_error_code="truthy-bool,truthy-iterable"
strict = true
