[project]
name = "bapctools"
dynamic = ["version"]
authors = [
    { name="Ragnar Groot Koerkamp", email="ragnar.grootkoerkamp@gmail.com" },
]
description = "Tools for developing ICPC-style programming contest problems."
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0"
license-files = ["LICENSE"]
dependencies = [
    "argcomplete~=3.6.3; platform_system != 'Windows'",
    "colorama~=0.4.6",
    "matplotlib~=3.10.7",
    "python-dateutil~=2.9.0",
    "questionary~=2.1.1",
    "requests~=2.32.5",
    "ruamel.yaml~=0.19.1",
    "vermin==1.8.0", # We define our own typing stubs, better use the exact version just to be sure it doesn't break.
]

[project.scripts]
bt = "bapctools.cli:main"

[project.urls]
Homepage = "https://github.com/ragnargrootkoerkamp/bapctools"
Issues = "https://github.com/ragnargrootkoerkamp/bapctools/issues"

[dependency-groups]
dev = [
    "pre-commit~=4.5.1",
    "pytest~=9.0.1",
    {include-group = "types"},
]
types = [
    "mypy~=1.19",
    "types-colorama~=0.4.15",
    "types-Pygments~=2.18.0",
    "types-python-dateutil~=2.9.0",
    "types-requests~=2.32.0",
]

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "I", # Enable import sorting rules
    "UP", # Enable upgrade rules
]
ignore = [
    "UP036", # Allow Python version checks
    "UP045", # Allow Optional
]

[tool.ruff.lint.isort]
# Case-insensitive ordering in `from ? import X, y, Z`
order-by-type = false

[tool.pyright]
include = ["bapctools"]
exclude = ["bapctools/resources"]

[tool.mypy]
python_version = "3.10"
packages = "bapctools"
exclude = ["^bapctools/resources/"]
check_untyped_defs = true
enable_error_code="truthy-bool,truthy-iterable"
strict = true
mypy_path = ["third_party/stubs/"]
